gitops/infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: home
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      tailscale.com/expose: "true"
      tailscale.com/hostname: gateway
      lbipam.cilium.io/ips: 192.168.1.51
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home.${DOMAIN}"
      tls:
        certificateRefs:
          - name: home-tls
      allowedRoutes:
        namespaces:
          from: All
